--- a/DiscordThemes/noon/Noon.theme.css
+++ b/DiscordThemes/noon/Noon.theme.css
@@ -20,7 +20,7 @@
                                          \______/
 /Import Base CSS File*/
 /*@import url('https://tropix126.github.io/BetterDiscordStuff/midnight/css/base.css');*/
-@import url('https://raw.githubusercontent.com/Bobjobob24/Noon/master/base.css');
+@import url('https://bobjobob24.github.io/DiscordThemes/noon/css/base.css');
 /*Root*/
 :root {
 /*Primary Variables*/
