--- a/DiscordThemes/noon/css/base.css
+++ b/DiscordThemes/noon/css/base.css
@@ -807,7 +807,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 }
 
 .winButtonClose-1HsbF-:hover {
-	background: #e81123;
+	background: #11bde8;
 }
 
 .winButtonClose-1HsbF-:active {
