--- a/DiscordThemes/noon/css/base.css
+++ b/DiscordThemes/noon/css/base.css
@@ -779,7 +779,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 
 .preview-2nSL_2 .compact-T3H92H:last-of-type::after,
 .messagesWrapper-3lZDfY .compact-T3H92H:last-of-type::after {
-	content:'Compact Mode is not supported on Midnight. Please deactivate it through settings.';
+	content:'Compact Mode is not supported on Midnight. Please deactivate it through settings. TESTING TESTING';
 	line-height:normal;
 	color: rgba(255, 255, 255, .65);
 	font-size: var(--size1);
