--- a/DiscordThemes/noon/css/base.css
+++ b/DiscordThemes/noon/css/base.css
@@ -802,7 +802,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 	width: 45px;
 	top: -4px;
 	cursor: default;
-	color: rgb(255, 255, 255);
+	color: #fff;
 	z-index:3001;
 }
 
