--- a/DiscordThemes/noon/css/base.css
+++ b/DiscordThemes/noon/css/base.css
@@ -2453,7 +2453,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 .membersWrap-2h-GB4 .scrollerWrap-2lJEkd::after {
 	content:'';
 	width:100%;
-	height:100px;
+	height:150px;
 	box-shadow:0 -10px 10px -10px var(--lv1), inset 0 0 0 100vmax rgba(255,255,255,0.07);
 	background:var(--lv1);
 	position:absolute;
@@ -2471,6 +2471,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 	border-radius: 0;
 	transition: 150ms all ease;
 	background: rgba(255, 255, 255, .08);
+	padding-top: 7px;
 	padding-bottom: 0;
 	height: 45px;
 	border-left: 2px solid rgba(255, 255, 255, .1);
