--- a/DiscordThemes/noon/css/base.css
+++ b/DiscordThemes/noon/css/base.css
@@ -807,19 +807,15 @@ html.theme-light body.bd-minimal #app-mount::before {
 }
 
 .winButtonClose-1HsbF-:hover {
-	background: #e81111;
+	background: #e81123;
 }
 
 .winButtonClose-1HsbF-:active {
     background:rgb(151,23,34);
 }
 
-.winButtonMinMax-PBQ2gm:hover {
-    background:rgba(60, 255, 0, 0.15);
-}
-
 .winButtonMinMax-PBQ2gm:active {
-    background:rgba(61, 61, 61, 0.15);
+    background:rgba(255,255,255,0.15);
 }
 
 /*2.b. OSX Titlebar and Buttons*/
@@ -2453,7 +2449,7 @@ html.theme-light body.bd-minimal #app-mount::before {
 .membersWrap-2h-GB4 .scrollerWrap-2lJEkd::after {
 	content:'';
 	width:100%;
-	height:150px;
+	height:50px;
 	box-shadow:0 -10px 10px -10px var(--lv1), inset 0 0 0 100vmax rgba(255,255,255,0.07);
 	background:var(--lv1);
 	position:absolute;
@@ -2471,9 +2467,9 @@ html.theme-light body.bd-minimal #app-mount::before {
 	border-radius: 0;
 	transition: 150ms all ease;
 	background: rgba(255, 255, 255, .08);
-	padding-top: 7px;
+	padding-top: 30px;
 	padding-bottom: 0;
-	height: 45px;
+	height: 30px;
 	border-left: 2px solid rgba(255, 255, 255, .1);
 	box-shadow: 0 0 2px 2px rgba(255, 255, 255, .08);
 	max-width: unset;
