--- a/DiscordThemes/noon/Noon.theme.css
+++ b/DiscordThemes/noon/Noon.theme.css
@@ -1,43 +1,45 @@
 /**
  * @name Noon UI
  * @author Bobjobob24
- * @version 1.7
+ * @version 2.0
  * @description Modification of Midnight UI by Tropical#8908
  * @source https://raw.githubusercontent.com/Bobjobob24/Noon/master/base.css
  * @website https://github.com/Bobjobob24
 */
 
-
-
-
 /*Import Base CSS File*/
 @import url('https://bobjobob24.github.io/DiscordThemes/noon/css/base.css');
+
 /*Root*/
 :root {
-/*Primary Variables*/
-  --lv1:#000009;
-  --accent:#01c9bfa6;
-  --hover:#16a2a7;
-  --bg:url('https://i.imgur.com/YxDlYIL.jpg');
-  --lvl-bg-opacity:0.25;
-  --lvl-bg-fade:80%;
-	--font:'Inter', sans-serif;
-	--letter-spacing:-.02rem;
-  font-size:14px !important;
-
-/*Status Variables*/
-  --online: #43b581;
-  --idle: #faa61a;
-  --dnd: #f04747;
-  --offline: #636b75;
-  --invisible: #747f8d;
-  --streaming: #9146FF;
-
-/*Roundness Variables*/
-  --user-roundness:0px;
-  --guilds-roundness:0px;
-
-/*SourceCheck*/
-  --sourcecheck-unsafe-embed-bg-dark:var(--lv1);
-  --sourcecheck-unsafe-shadow-tint-dark:var(--lv1);
+	/*Primary Variables*/
+    --lv1:#000009;
+    --accent:#01c9bfa6;
+    --hover:#16a2a7;
+    --bg:url('https://i.imgur.com/YxDlYIL.jpg');
+	--bg-opacity: 0.25;
+	--bg-fade: 80%;
+	--font: 'Inter', sans-serif;
+	--letter-spacing: -.02rem;
+  font-size: 14px !important;
+  
+	/*Status Variables*/
+  --success: #11d85d;
+	--caution: #ffd104;
+	--danger: #e20b0b;
+	--unavailable: #636b75;
+	--invisible: #747f8d;
+	--information: #4a90e2;
+	--twitch-purple: #9146FF;
+	--spotify-green: #1DB954;
+	--xbox-green: #0e7a0d;
+  --netflix-red: #e50914;
+  
+	/*Roundness Variables*/
+	--user-roundness: 0px;
+  --guilds-roundness: 0px;
+  
+	/*SourceCheck*/
+	--sourcecheck-unsafe-embed-bg-dark: var(--lv1);
+	--sourcecheck-unsafe-shadow-tint-dark: var(--lv1);
 }
