--- a/DiscordThemes/noon/Noon.theme.css
+++ b/DiscordThemes/noon/Noon.theme.css
@@ -1,7 +1,7 @@
 /**
  * @name Noon UI
  * @author Bobjobob24
- * @version 1.7
+ * @version Auto
  * @description Modification of Midnight UI by Tropical#8908
  * @source https://raw.githubusercontent.com/Bobjobob24/Noon/master/base.css
  * @website https://github.com/Bobjobob24
